--- a/site-cookbooks/openvpn/templates/default/server.conf.erb
+++ b/site-cookbooks/openvpn/templates/default/server.conf.erb
@@ -7,11 +7,10 @@
 # on the same machine, use a different port
 # number for each one.  You will need to
 # open up this port on your firewall.
-port 1194
+port <%= node["openvpn"]["port"] %>
 
 # TCP or UDP server?
-;proto tcp
-proto udp
+proto <%= node["openvpn"]["proto"] %>
 
 # "dev tun" will create a routed IP tunnel,
 # "dev tap" will create an ethernet tunnel.
