--- a/site-cookbooks/btsync/templates/default/conf.json.erb
+++ b/site-cookbooks/btsync/templates/default/conf.json.erb
@@ -3,13 +3,18 @@
 //
 
 {
-  "device_name": "John Doe's btsync Server",
+  "device_name": "SCSC",
   "listening_port": 0,
   "storage_path": "/data/.btsync",
   "check_for_updates": false,
   "use_upnp": false,
   "download_limit": 0,
   "upload_limit": 0,
+  "disk_low_priority": true,
+  "lan_encrypt_data": true,
+  "lan_use_tcp": false,
+  "rate_limit_local_peers": false,
+  "folder_rescan_interval": 600,
   "webui": {
     "listen": "127.0.0.1:<%= node["btsync"]["webui-port"] %>"
   },
