only allow access from vpn

--- a/site-cookbooks/hosts/templates/default/dav.conf.erb
+++ b/site-cookbooks/hosts/templates/default/dav.conf.erb
@@ -6,7 +6,7 @@
     Options Indexes MultiViews
     AllowOverride None
     Order deny,allow
-    Allow from all
+    Allow from 10.17.0
   </Directory>
   <Location />
     DAV On
