--- a/site-cookbooks/hosts/templates/default/wsgi.conf.erb
+++ b/site-cookbooks/hosts/templates/default/wsgi.conf.erb
@@ -4,7 +4,7 @@
   DocumentRoot <%= @params[:document_root] %>
   <Directory <%= @params[:document_root] %>>
     Order deny,allow
-    Allow from all
+    Allow from 10.17.0
   </Directory>
 
   WSGIProcessGroup <%= @params[:process_group] %>
