--- a/site-cookbooks/dnscrypt-proxy/templates/default/apparmor.erb
+++ b/site-cookbooks/dnscrypt-proxy/templates/default/apparmor.erb
@@ -6,37 +6,36 @@
 
 /usr/local/sbin/dnscrypt-proxy {
 
-network inet stream,
-network inet6 stream,
-network inet dgram,
-network inet6 dgram,
+  network inet stream,
+  network inet6 stream,
+  network inet dgram,
+  network inet6 dgram,
 
-capability net_admin,
-capability net_bind_service,
-capability setgid,
-capability setuid,
-capability sys_chroot,
+  capability net_admin,
+  capability net_bind_service,
+  capability setgid,
+  capability setuid,
+  capability sys_chroot,
 
-/usr/local/lib/libsodium.so* mr,
-
-/bin/false r,
-/dev/null rw,
-/dev/urandom r,
-/etc/ld.so.cache r,
-/etc/localtime r,
-/etc/nsswitch.conf r,
-/etc/passwd r,
-/lib/*-linux-gnu*/libc-*.so mr,
-/lib/*-linux-gnu*/libm-*.so mr,
-/lib/*-linux-gnu*/libnsl-*.so mr,
-/lib/*-linux-gnu*/libnss_compat-*.so mr,
-/lib/*-linux-gnu*/libnss_files-*.so mr,
-/lib/*-linux-gnu*/libnss_nis-*.so mr,
-/usr/lib/*-linux-gnu*/libltdl.so.* mr,
-
-/usr/lib/libsodium.so* mr,
-/usr/local/lib/libsodium.so* mr,
-
-/usr/lib/libdns.so* mr,
+  /bin/false r,
+  /dev/null rw,
+  /dev/urandom r,
+  /etc/ld.so.cache r,
+  /etc/localtime r,
+  /etc/nsswitch.conf r,
+  /etc/passwd r,
+  /lib/*-linux-gnu*/libc-*.so mr,
+  /lib/*-linux-gnu*/libm-*.so mr,
+  /lib/*-linux-gnu*/libnsl-*.so mr,
+  /lib/*-linux-gnu*/libnss_compat-*.so mr,
+  /lib/*-linux-gnu*/libnss_files-*.so mr,
+  /lib/*-linux-gnu*/libnss_nis-*.so mr,
+  /lib/x86_64-linux-gnu/libdl-*.so mr,
+  /lib/x86_64-linux-gnu/libpthread-*.so mr,
+  /lib/x86_64-linux-gnu/librt-*.so mr,
+  /usr/lib/*-linux-gnu*/libltdl.so.* mr,
+  /usr/lib/libdns.so* mr,
+  /usr/lib/libsodium.so* mr,
+  /usr/local/lib/libsodium.so* mr,
 
 }
