--- a/site-cookbooks/openvpn/templates/default/client.conf.erb
+++ b/site-cookbooks/openvpn/templates/default/client.conf.erb
@@ -93,11 +93,11 @@ key client.key
 # your server certificates with the nsCertType
 # field set to "server".  The build-key-server
 # script in the easy-rsa folder will do this.
-;ns-cert-type server
+ns-cert-type server
 
 # If a tls-auth key is used on the server
 # then every client must also have the key.
-;tls-auth ta.key 1
+tls-auth ta.key 1
 
 # Select a cryptographic cipher.
 # If the cipher option is used on the server
