--- a/site-cookbooks/openvpn/templates/default/server.conf.erb
+++ b/site-cookbooks/openvpn/templates/default/server.conf.erb
@@ -49,11 +49,7 @@ cert server.crt
 key server.key  # This file should be kept secret
 
 # Diffie hellman parameters.
-# Generate your own with:
-#   openssl dhparam -out dh1024.pem 1024
-# Substitute 2048 for 1024 if you are using
-# 2048 bit keys. 
-dh dh1024.pem
+dh dh<%= node["openvpn"]["key_size"] %>.pem
 
 # Configure server mode and supply a VPN subnet
 # for OpenVPN to draw client addresses from.
@@ -174,7 +170,7 @@ keepalive 10 120
 # a copy of this key.
 # The second parameter should be '0'
 # on the server and '1' on the clients.
-;tls-auth ta.key 0 # This file is secret
+tls-auth ta.key 0 # This file is secret
 
 # Select a cryptographic cipher.
 # This config item must be copied to
