--- a/site-cookbooks/dnsmasq/templates/default/dnsmasq.conf.erb
+++ b/site-cookbooks/dnsmasq/templates/default/dnsmasq.conf.erb
@@ -7,14 +7,15 @@ no-poll
 server=127.0.0.1#<%= port %>
 <% end %>
 
-<% node["dnsmasq"]["opennic_servers"].each do |server| %>
+<% node["dnsmasq"]["fallback_servers"].each do |server| %>
 server=/pool.ntp.org/<%= server %>
 server=/github.com/<%= server %>
+server=/packages.ubuntu.com/<%= server %>
 <% end %>
 
 <% node["dnsmasq"]["opennic_domains"].each do |domain| %>
-  <% node["dnsmasq"]["opennic_servers"].each do |server| %>
-server=/<%= domain %>/<%= server %>
+  <% node["dnsmasq"]["opennic_dnscrypt_ports"].each do |port| %>
+server=/<%= domain %>/127.0.0.1#<%= port %>
   <% end %>
 <% end %>
 
