fix transmission config

--- a/site-cookbooks/transmission/templates/default/settings.json.erb
+++ b/site-cookbooks/transmission/templates/default/settings.json.erb
@@ -3,6 +3,7 @@
     "port-forwarding-enabled": false,
     "rpc-enabled": true,
     "rpc-port": 9091,
+    "rpc-authentication-required": false,
     "rpc-whitelist": "127.0.0.1,10.17.0.*",
     "peer-port" : <%= @node[:bittorrent_peer_port] %>,
     "blocklist-enabled": true,
