--- a/site-cookbooks/openvpn/templates/default/make_client_package.erb
+++ b/site-cookbooks/openvpn/templates/default/make_client_package.erb
@@ -5,11 +5,11 @@ source ./vars
 ./pkitool client
 DIR=/home/<%= @node[:user] %>/$1
 mkdir $DIR
-mv keys/client.crt $DIR
+cp keys/client.crt $DIR
 mv keys/client.key $DIR
 cp keys/ca.crt $DIR
 cp keys/ta.key $DIR
-cp /etc/openvpn/client.conf $DIR
+cp /etc/openvpn/client.conf $DIR/client.ovpn
 cd /home/<%= @node[:user] %>
 tar --file=$1.tar.gz -czv $1
 rm -Rf $DIR
