--- a/site-cookbooks/znc/templates/default/znc.conf.erb
+++ b/site-cookbooks/znc/templates/default/znc.conf.erb
@@ -25,19 +25,21 @@ Version = 1.0
   IPv4 = true
   IPv6 = false
   Port = 6697
+  SSL = False
 </Listener>
 
-<User TODO>
+<User admin>
+  Pass = sha256#401ed25e2957cce385dfe9c1239020470b7fa738b31cac45184894f8fcc808ac#hlF?wp)q1xmAL,8(D8Xj#
   Admin = true
   Allow = *
-  AltNick = TODO_
+  AltNick = admin_
   AppendTimestamp = false
   AutoClearChanBuffer = true
   Buffer = 5000
   ChanModes = +stn
   DenyLoadMod = false
   DenySetBindHost = false
-  Ident = TODO
+  Ident = admin
   JoinTries = 10
   LoadModule = controlpanel
   LoadModule = perform
@@ -45,10 +47,10 @@ Version = 1.0
   LoadModule = clientnotify
   MaxNetworks = 1
   MultiClients = true
-  Nick = TODO
+  Nick = admin
   PrependTimestamp = true
-  QuitMsg = TODO
-  RealName = TODO
+  QuitMsg = Bye
+  RealName = Admin
   TimestampFormat = [%H:%M:%S]
 
   <Network freenode>
@@ -68,10 +70,4 @@ Version = 1.0
     LoadModule = savebuff
     Server = 127.0.0.1 6668
   </Network>
-
-  <Pass password>
-    Hash = TODO
-    Method = SHA256
-    Salt = TODO
-  </Pass>
 </User>
