--- a/site-cookbooks/coldsweat/templates/default/config.erb
+++ b/site-cookbooks/coldsweat/templates/default/config.erb
@@ -20,7 +20,7 @@ scrub: off ; Remove links and images from entries according to /etc/blacklist
 [log]
 ; See http://docs.python.org/2/howto/logging.html#when-to-use-logging
 level: INFO
-filename: coldsweat.log
+filename: /var/log/coldsweat/coldsweat.log
 format : localhost - - [%(asctime)s] %(process)d %(levelname)s %(message)s
 datefmt: %d/%b/%Y:%H:%M:%S %z
 
