--- a/site-cookbooks/privoxy/templates/default/config.erb
+++ b/site-cookbooks/privoxy/templates/default/config.erb
@@ -20,4 +20,4 @@ enforce-blocks 0
 
 forward .i2p localhost:4444
 forward-socks5 .onion localhost:9050 .
-forward-socks5 .tor localhost:9950 .
+forward-socks4a .tor localhost:9950 .
