--- a/site-cookbooks/znc/templates/default/znc.conf.erb
+++ b/site-cookbooks/znc/templates/default/znc.conf.erb
@@ -24,7 +24,7 @@ Version = 1.0
   AllowWeb = true
   IPv4 = true
   IPv6 = false
-  Port = 6697
+  Port = <%= node["znc"]["port"] %>
   SSL = False
 </Listener>
 
