--- a/site-cookbooks/transmission/templates/default/settings.json.erb
+++ b/site-cookbooks/transmission/templates/default/settings.json.erb
@@ -2,10 +2,10 @@
     "download-dir": "/data/files",
     "port-forwarding-enabled": false,
     "rpc-enabled": true,
-    "rpc-port": 9091,
+    "rpc-port": <%= node["transmission"]["rpc-port"] %>,
     "rpc-authentication-required": false,
     "rpc-whitelist": "127.0.0.1,10.17.0.*",
-    "peer-port" : <%= @node[:bittorrent_peer_port] %>,
+    "peer-port" : <%= node[:bittorrent_peer_port] %>,
     "blocklist-enabled": true,
-    "blocklist-url": "<%= @node[:bittorrent_blocklist_url] %>"
+    "blocklist-url": "<%= node[:bittorrent_blocklist_url] %>"
 }
