--- a/site-cookbooks/tor/templates/default/tor-dns-proxy.upstart.conf.erb
+++ b/site-cookbooks/tor/templates/default/tor-dns-proxy.upstart.conf.erb
@@ -6,9 +6,6 @@ stop on shutdown
 
 respawn
 
-setuid nobody
-setgid nogroup
-
 script
-  start-stop-daemon --start --make-pidfile --pidfile /var/run/tor-dns-proxy.pid --exec /usr/local/bin/proxymachine -- -p <%= node["tor"]["socks-resolver-port"] %> -c /opt/tor-dns-proxy.rb
+  start-stop-daemon --start --make-pidfile --pidfile /var/run/tor-dns-proxy.pid --chuid nobody:nogroup --exec /usr/local/bin/proxymachine -- -p <%= node["tor"]["socks-resolver-port"] %> -c /opt/tor-dns-proxy.rb
 end script
