--- a/site-cookbooks/znc/templates/default/socat-freenode.conf.erb
+++ b/site-cookbooks/znc/templates/default/socat-freenode.conf.erb
@@ -6,9 +6,6 @@ stop on shutdown
 
 respawn
 
-setuid nobody
-setgid nogroup
-
 script
-   socat TCP4-LISTEN:6696,fork SOCKS4A:localhost:$(dig +short irc.tor.freenode.net cname | sed -E "s/([^\.]+\.[^\.]+)\./\1/"):6697,socksport=9050
+  start-stop-daemon --start --make-pidfile --pidfile /var/run/socat-freenode.pid --chuid nobody:nogroup --exec /usr/bin/socat -- TCP4-LISTEN:<%= node["znc"]["socat-freenode-port"] %>,fork SOCKS4A:localhost:$(dig +short irc.tor.freenode.net cname | sed -E "s/([^\.]+\.[^\.]+)\./\1/"):6697,socksport=<%= node["tor"]["socks-port"] %>
 end script
