--- a/site-cookbooks/hosts/templates/default/proxy.conf.erb
+++ b/site-cookbooks/hosts/templates/default/proxy.conf.erb
@@ -1,9 +1,17 @@
+<VirtualHost *:80>
+  ServerName <%= @params[:server_name] %>
+  RedirectMatch (.*) https://<%= @params[:server_name] %>$1
+</VirtualHost>
+
 <VirtualHost *:443>
   ServerName <%= @params[:server_name] %>
 
   SSLEngine On
-  SSLCertificateFile /etc/openvpn/server.crt
-  SSLCertificateKeyFile /etc/openvpn/server.key
+  SSLCertificateFile <%= node["hosts"]["ssl-cert"] %>
+  SSLCertificateKeyFile <%= node["hosts"]["ssl-key"] %>
+  SSLProtocol <%= node["hosts"]["ssl-protocol"] %>
+  SSLCipherSuite <%= node["hosts"]["ssl-ciphers"] %>
+  SSLHonorCipherOrder on
 
   ProxyPreserveHost On
   ProxyPass / <%= @params[:dest] %>
@@ -12,7 +20,6 @@
     Order deny,allow
     Allow from 10.17.0
   </Proxy>
-
 
   LogLevel info
   ErrorLog <%= node['apache']['log_dir'] %>/<%= @params[:name] %>-error.log
