--- a/site-cookbooks/znc/templates/default/socat.conf.erb
+++ b/site-cookbooks/znc/templates/default/socat.conf.erb
@@ -7,5 +7,5 @@ stop on shutdown
 respawn
 
 script
-  start-stop-daemon --start --make-pidfile --pidfile /var/run/socat-<%= @network %>.pid --chuid nobody:nogroup --exec /usr/bin/socat -- TCP4-LISTEN:<%= @listen_port %>,fork SOCKS4A:localhost:<%= @network_address %>:6697,socksport=<%= node["tor"]["socks-port"] %> > /var/log/socat-<%= @network %>.log
+  start-stop-daemon --start --make-pidfile --pidfile /var/run/socat-<%= @network %>.pid --chuid nobody:nogroup --exec /usr/bin/socat -- TCP4-LISTEN:<%= @listen_port %>,fork SOCKS4A:localhost:<%= @network_address %>,socksport=<%= node["tor"]["socks-port"] %> > /var/log/socat-<%= @network %>.log
 end script
