--- a/site-cookbooks/znc/templates/default/znc.conf.erb
+++ b/site-cookbooks/znc/templates/default/znc.conf.erb
@@ -11,6 +11,7 @@ ConnectDelay = 5
 LoadModule = webadmin
 LoadModule = fail2ban
 LoadModule = lastseen
+LoadModule = push
 MaxBufferSize = 500
 PidFile = /var/run/znc/znc.pid
 ProtectWebSessions = true
