--- a/site-cookbooks/znc/templates/default/znc.conf.erb
+++ b/site-cookbooks/znc/templates/default/znc.conf.erb
@@ -12,6 +12,7 @@ LoadModule = webadmin
 LoadModule = fail2ban
 LoadModule = lastseen
 LoadModule = push
+LoadModule = palaver
 MaxBufferSize = 500
 PidFile = /var/run/znc/znc.pid
 ProtectWebSessions = true
