--- a/site-cookbooks/subsonic/templates/default/subsonic.upstart.conf.erb
+++ b/site-cookbooks/subsonic/templates/default/subsonic.upstart.conf.erb
@@ -1,5 +1,5 @@
 #!upstart
-description "subsonic music server on jetty-runner"
+description "subsonic music server on webapp-runner"
 
 start on startup
 stop on shutdown
@@ -7,5 +7,5 @@ stop on shutdown
 respawn
 
 script
-  start-stop-daemon --start --make-pidfile --pidfile /var/run/subsonic.pid --chuid <%= node["subsonic"]["user"] %>:<%= node["subsonic"]["group"] %> --exec /usr/bin/java -- -Dsubsonic.home=<%= node["subsonic"]["home"] %> -jar <%= @jetty_path %> --port <%= node["subsonic"]["port"] %> <%= @subsonic_path %>
+  start-stop-daemon --start --make-pidfile --pidfile /var/run/subsonic.pid --chuid <%= node["subsonic"]["user"] %>:<%= node["subsonic"]["group"] %> --exec /usr/bin/java -- -Dsubsonic.home=<%= node["subsonic"]["home"] %> -jar <%= @runner_path %> --port <%= node["subsonic"]["port"] %> <%= @subsonic_path %>
 end script
